# web.fastapi_restapi

./: pyproject.toml
ht_12/: contacts_.py
ht_12/src/database/: models_.py
ht_12/src/repository/: contacts.py  users.py
ht_12/src/routes/: auth.py  contacts.py
ht_12/src/schemes/: users.py
ht_12/src/services/: auth.py  roles.py
